<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_normal">
    
    <!-- 搜索框 -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_normal"
        app:startIconDrawable="@drawable/ic_search">
        
        <EditText
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_search"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    
    <!-- 事件列表 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_events"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/padding_normal" />
    
    <!-- 空状态 -->
    <LinearLayout
        android:id="@+id/empty_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_state"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>
    
    <!-- 添加事件按钮 -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/padding_large"
        android:contentDescription="@string/btn_add"
        app:srcCompat="@drawable/ic_add" />
    
</LinearLayout>
